test/users/brodtkorb/coercionQuestion.good
coercionQuestion.chpl:2: error: unresolved call '<=(1.1, 1)'
$CHPL_HOME/modules/standard/ChapelBase.chpl:166: note: candidates are: <=(a: int(32), b: int(32))
$CHPL_HOME/modules/standard/ChapelBase.chpl:167: note:                 <=(a: int(64), b: int(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:168: note:                 <=(a: uint(32), b: uint(32))
$CHPL_HOME/modules/standard/ChapelBase.chpl:169: note:                 <=(a: uint(64), b: uint(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:172: note:                 <=(a: string, b: string)
$CHPL_HOME/modules/standard/ChapelBase.chpl:198: note:                 <=(param a: int(32), param b: int(32))
$CHPL_HOME/modules/standard/ChapelBase.chpl:199: note:                 <=(param a: int(64), param b: int(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:200: note:                 <=(param a: uint(32), param b: uint(32))
$CHPL_HOME/modules/standard/ChapelBase.chpl:201: note:                 <=(param a: uint(64), param b: uint(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:202: note:                 <=(param a: enumerated, param b: enumerated)
$CHPL_HOME/modules/standard/ChapelBase.chpl:203: note:                 <=(param a: string, param b: string)
$CHPL_HOME/modules/standard/ChapelBase.chpl:1474: note:                 <=(a: uint(64), b: int(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:1475: note:                 <=(a: int(64), b: uint(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:1478: note:                 <=(param a: uint(64), param b: int(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:1481: note:                 <=(param a: int(64), param b: uint(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:1486: note:                 <=(a: uint(64), param b: int(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:1489: note:                 <=(param a: int(64), b: uint(64))
$CHPL_HOME/modules/standard/ChapelTuple.chpl:393: note:                 <=(a: _tuple, b: _tuple)
$CHPL_HOME/modules/standard/ChapelBase.chpl:170: note:                 <=(a: real(32), b: real(32))
$CHPL_HOME/modules/standard/ChapelBase.chpl:170: note:                 <=(a: real, b: real)
$CHPL_HOME/modules/standard/ChapelBase.chpl:171: note:                 <=(a: imag(32), b: imag(32))
$CHPL_HOME/modules/standard/ChapelBase.chpl:171: note:                 <=(a: imag, b: imag)
